--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node src/server.js"
+    "start": "source src/sh/env.sh && babel-node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HDTran91/Real_Time_Chat#readme",
   "dependencies": {
+    "bluebird": "^3.5.3",
     "express": "^4.18.2",
     "mongoose": "^4.13.9"
   },
