--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/HDTran91/Real_Time_Chat#readme",
   "dependencies": {
     "bluebird": "^3.5.3",
+    "ejs": "^2.5.7",
     "express": "^4.18.2",
+    "express-ejs-extend": "^0.0.1",
     "mongoose": "^4.13.9"
   },
   "devDependencies": {
