--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   },
   "homepage": "https://github.com/HDTran91/Real_Time_Chat#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "ejs": "^2.5.7",
     "express": "^4.18.2",
     "express-ejs-extend": "^0.0.1",
+    "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
-    "mongoose": "^4.13.9"
+    "mongoose": "^4.13.9",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
